raffia/tests/error/scss/at-rule/content/comments-in-arbitrary-arg.snap
---
source: raffia/tests/error.rs
---
error: unexpected whitespace or comments
  ┌─ comments-in-arbitrary-arg.scss:2:14
  │
2 │   @content($a/*a*/...);
  │              ^^^^^


